# Terminal-Pixel-Dungeon

./: CHANGELOG_EVENT_BUS_TAXONOMY.md  CLAUDE.md  COMBAT_SYSTEM.md  Cargo.toml  EVENT_BUS_GUIDE.md  EVENT_BUS_QUICKSTART.md  EVENT_BUS_README.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  QWEN.md  README.md  TEST_SUITE_SUMMARY.md  TICKET_CHECKLIST.md  TURN_STATE_PERSISTENCE.md  UI_GUIDE.md  UI_IMPROVEMENTS.md  代码审查报告.md
.github/workflows/: rust.yml
benches/: turn_pipeline_bench.rs.todo
docs/: ACHIEVEMENTS.md  ACHIEVEMENTS_IMPLEMENTATION.md  AI_ENERGY_INTEGRATION.md  BOSS_SYSTEM.md  EVENT_BUS_GUIDE.md  EVENT_BUS_MIGRATION.md  EVENT_BUS_TAXONOMY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  TEST_INFRASTRUCTURE_DELIVERY.md  turn_system.md  turn_system_refactor.md  turn_system_zh.md  中文化说明.md
examples/: enhanced_controls_demo.rs  event_handlers.rs  ui_demo.rs
src/: core.rs  ecs.rs  event_bus.rs  game_loop.rs  gfx.rs  hero_adapter.rs  input.rs  lib.rs  main.rs  renderer.rs  systems.rs  systems.rs.backup  turn_system.rs
src/achievements/: CHECKLIST.md  Cargo.toml  README.md  SUMMARY.md
src/achievements/examples/: basic_usage.rs
src/achievements/src/: achievement.rs  criteria.rs  lib.rs  tests.rs
src/combat/: Cargo.toml  combat.rs  mod.rs
src/combat/src/: boss.rs  combat_manager.rs  combatant.rs  effect.rs  enemy.rs  lib.rs  status_effect.rs  tests.rs  vision.rs
src/combat/src/enemy/: enemy.rs
src/core/: entity_factory.rs  game_state.rs
src/dungeon/: Cargo.toml  dungeon.rs  test.rs
src/dungeon/src/: boss_room.rs  level.rs  lib.rs  trap.rs
src/dungeon/src/level/: level.rs  mod.rs  rooms.rs  tiles.rs
src/dungeon/src/level/rooms/: rooms.rs
src/dungeon/src/level/tiles/: tiles.rs
src/error/: Cargo.toml  error.rs
src/error/src/: lib.rs
src/hero/: Cargo.toml  hero.rs  mod.rs
src/hero/bag/: bag.rs
src/hero/class/: class.rs  mod.rs
src/hero/class/huntress/: mod.rs
src/hero/class/mage/: mod.rs
src/hero/class/rogue/: mod.rs
src/hero/class/warrior/: mod.rs
src/hero/src/: abilities.rs  bag.rs  class.rs  combat.rs  core.rs  effects.rs  lib.rs  mod.rs  rng.rs
src/hero/src/bag/: bag.rs  equipment.rs  inventory.rs  mod.rs
src/hero/src/class/: class.rs  mod.rs
src/hero/src/class/huntress/: mod.rs
src/hero/src/class/mage/: mod.rs
src/hero/src/class/warrior/: mod.rs
src/hero/src/core/: events.rs  item.rs
src/items/: Cargo.toml  items.rs  mod.rs
src/items/armor/: armor.rs  mod.rs
src/items/food/: food.rs  mod.rs
src/items/misc/: misc.rs  mod.rs
src/items/potion/: mod.rs  potion.rs
src/items/ring/: mod.rs  ring.rs
src/render/: boss.rs  class_selection.rs  dungeon.rs  game_over.rs  hud.rs  inventory.rs  menu.rs  mod.rs
src/save/: Cargo.toml  mod.rs  save.rs  test.rs
src/save/src/: lib.rs
src/ui/: Cargo.toml  mod.rs  terminal.rs  ui.rs
src/ui/input/: actions.rs  input.rs  mod.rs  navigation.rs
src/ui/render/: dungeon.rs  hud.rs  inventory.rs  mod.rs  render.rs
src/ui/src/: lib.rs  terminal.rs
src/ui/src/input/: actions.rs  enhanced_input.rs  input.rs  mod.rs  navigation.rs
src/ui/src/render/: animation.rs  dialogs.rs  dungeon.rs  hud.rs  inventory.rs  messages.rs  mod.rs  render.rs
src/ui/src/states/: common.rs  game.rs  help.rs  load.rs  menu.rs  mod.rs  settings.rs  states.rs
src/ui/states/: common.rs  game.rs  menu.rs  mod.rs  states.rs
tests/: ACTIVATION_GUIDE.md  README.md  adapters_eventbus_tests.rs  ai_energy_integration_test.rs  class_skills_test.rs  dungeon_turn_costs_test.rs  effect_system_tests.rs  event_bus_taxonomy_tests.rs  hud_snapshot.rs  hunger_system_tests.rs  integration_tests.rs.todo  performance_tests.rs.todo  property_tests.rs.todo  regression_tests.rs.todo  save_load_tests.rs.todo  save_turn_state_integration.rs
tests/helpers/: mod.rs
(+30 files in other folders)
