[package]
name = "terminal_pixel_dungeon"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
crossterm = "0.29.0"
rand = "0.9.0"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tui = "0.19.0"
