[workspace]
members = [
    "src/combat",
    "src/dungeon",
    "src/hero",
    "src/items",
    "src/save",
    "src/error",
    "src/achievements",
]
resolver = "2"

[package]
name = "terminal_pixel_dungeon"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
crossterm = "0.29.0"
hecs = "0.10.5"
rand = "0.9.0"
ratatui = "0.28.1"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"

# Local path dependencies to subcrates
# 注意：实际使用中，模块间应通过事件总线进行通信，而不是直接依赖
combat = { path = "src/combat", version = "0.1.0" }
dungeon = { path = "src/dungeon", version = "0.1.0" }
hero = { path = "src/hero", version = "0.1.0" }
items = { path = "src/items", version = "0.1.0" }
save = { path = "src/save", version = "0.1.0" }
error = { path = "src/error", version = "0.1.0" }
achievements = { path = "src/achievements", version = "0.1.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
pretty_assertions = "1.4"

# Benchmark configuration (currently disabled pending API updates)
# [[bench]]
# name = "turn_pipeline_bench"
# harness = false
