[package]
name = "combat"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
items = { version = "0.1.0", path = "../items" }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
tui = "0.19.0"
