[package]
name = "dungeon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = "2.0.1"
combat = { version = "0.1.0", path = "../combat" }
items = { version = "0.1.0", path = "../items" }
rand = "0.9.0"
rand_pcg = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
