[package]
name = "hero"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["serde"] }
combat = { version = "0.1.0", path = "../combat" }
dungeon = { version = "0.1.0", path = "../dungeon" }
items = { version = "0.1.0", path = "../items" }
rand = "0.9.0"
rand_pcg = { version = "0.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
