[package]
name = "save"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
dungeon = { version = "0.1.0", path = "../dungeon" }
error = { version = "0.1.0", path = "../error" }
hero = { version = "0.1.0", path = "../hero" }
serde = { version = "1.0.219", features = ["derive"] }
