[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
crossterm = "0.29.0"
dungeon = { version = "0.1.0", path = "../dungeon" }
hero = { version = "0.1.0", path = "../hero" }
items = { version = "0.1.0", path = "../items" }
ratatui = "0.28.1"
save = { version = "0.1.0", path = "../save" }
util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
